--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -26,6 +26,8 @@
 
         <activity android:name=".SearchHistoryActivity">
         </activity>
+        <service android:name=".AddWordIntentService"
+            android:exported="false"/>
     </application>
 
 </manifest>
